--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -58,12 +58,16 @@
                     <h3>Version Control<br/><small>GitHub</small> </h3>
                     <p>Continuous version control to manage projects timely manner.</p>
                 </div>
+                <!-- in case I am going to add more..
                 <div class="col-lg-4 col-sm-6 text-center">
                     <img class="img-center" src="" height="200" alt="">
                     <h3>Some skill<br/><small>related info</small></h3>
                     <p>related info</p>
                 </div>
+                -->
             </div>
+            
+            
             <!-- Initial contents. Not included yet...
             
             <div class="row">
