--- a/views/pages/services.ejs
+++ b/views/pages/services.ejs
@@ -1,14 +1,19 @@
 <!-- File name: services.ejs
      Author's name: Hae Yeon Kang (Lucy)
      web site name: Hae Yeon's Portfolio Website
-     file description: This is a page that 
+     file description: This is a page that will display services that I provide.
 -->
-    <% include ../partials/header %>
+
+<% include ../partials/header %>
     <main class="main">
         <div class="container">
             <div class="page-header">
                 <h1> Services </h1>
             </div>
+            <img class="serviceimg" src="../images/cms-design.png" alt="services" width="">
+            <p>If you would like to increase the exposure and awareness of your business, there is nothing more important than having a well-designed website that represents your business.</p>
+            <p>I am currently looking for businesses who would like a new website or improved website which will be one of my portfolios. The websites will be built on latest technology with professional look.</p>
+            <p>If you have an enquiry, <a href="/contact">click here</a> to send me an email. <br/><br/></p>
         </div>
     </main>
-        <% include ../partials/footer %>
+<% include ../partials/footer %>
