--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,9 @@
+<!--
+File name: footer.ejs
+Author's name: Hae Yeon Kang (Lucy)
+web site name: Hae Yeon's Portfolio Website
+file description: This footer section will be called whenever a page is called.
+-->
     <footer class="footer">
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -5,12 +11,6 @@
         <script src="scripts/app.js"></script>
         
             <div class="container">
-                <!-- adding social media link 
-                <div class="">
-                <a href="#" target="_blank"> <img src="" alt="View LinkedIn Page" /></a>
-                <a href="#" target="_blank"><img src="" alt="View Twitter Page" width="45"/></a>
-                </div>
-                -->
                 <p class="text-muted">
                 &copy;2016 HAE YEON KANG. All Rights Reserved. <br />
                 Email: <a href="mailto:lucy.h.kang@gmail.com">lucy.h.kang@gmail.com</a>
