--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,9 @@
-
+<!--
+File name: header.ejs
+Author's name: Hae Yeon Kang (Lucy)
+web site name: Hae Yeon's Portfolio Website
+file description: This head section will be called whenever a page is called.
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
