--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,6 +7,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Index (Home) page won't have navigation. So it won't use header.ejs file for customization -->
+
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +17,7 @@
     <title>
         <%= title %>
     </title>
-    
+
     <!-- favicon -->
     <!--<link rel="icon" type="image/png" href="pics/favicon.png" />-->
 
@@ -33,7 +35,8 @@
 
 <body class="full">
     <header id="top" class="header">
-        <!-- hiding navbar on the first landing page
+        <!-- hiding navbar on the first landing page for now. 
+        
         <nav class="navbar navbar-transparent" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -63,12 +66,21 @@
             </div>
         </nav>
         -->
-        <div class="text-vertical-center">
-            <img src="images/logo.png" alt="HAE YEON KANG" width="300" />
-            <h3>message</h3>
-            <br>
-            <a href="/about" class="btn btn-dark btn-lg">Let's find out!</a>
-        </div>
-        </header>
         
+        <div class="col-md-6 col-md-offset-3 panel panel-default">
+            <div class="text-vertical-center">
+                <img src="images/logo.png" alt="HAE YEON KANG" width="300" />
+                <p>
+                    <br/>
+                </p>
+                <h4 style="font-size: 15pt; font-family: Courier New;">
+                    Hi, it is great to meet you. 
+                    <br/>I'm Hae Yeon Kang, a Computer Programmer, <br/>and welcome to my portfolio website.
+                </h4>
+                <br/>
+                <a href="/about" class="btn btn-dark btn-lg">Click Here!</a>
+            </div>
+        </div>
+    </header>
+
     <% include ../partials/footer %>
