added comments in the files

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,6 +1,7 @@
 <!-- File name: aboutme.ejs
      Author's name: Hae Yeon Kang (Lucy)
      web site name: Hae Yeon's Portfolio Website
+     URL: haeyeonkang.azurewebsites.net
      file description: This is a page that describes my qualification, education, experiences and personal interest.
 -->
 
