--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,6 +1,7 @@
 <!-- File name: contactme.ejs
      Author's name: Hae Yeon Kang (Lucy)
      web site name: Hae Yeon's Portfolio Website
+     URL: haeyeonkang.azurewebsites.net
      file description: This is a page with contact form that will send me a mail with details entered by users.
 -->
 <style>
