--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,6 +1,7 @@
 <!-- File name: index.ejs
      Author's name: Hae Yeon Kang (Lucy)
      web site name: Hae Yeon's Portfolio Website
+     URL: haeyeonkang.azurewebsites.net
      file description: This is the main page of the website.
 -->
 
