--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,6 +2,7 @@
 File name: footer.ejs
 Author's name: Hae Yeon Kang (Lucy)
 web site name: Hae Yeon's Portfolio Website
+URL: haeyeonkang.azurewebsites.net
 file description: This footer section will be called whenever a page is called.
 -->
     <footer class="footer">
