--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,11 @@
+/*
+File name: style.css
+Author's name: Hae Yeon Kang (Lucy)
+web site name: Hae Yeon's Portfolio Website
+URL: haeyeonkang.azurewebsites.net
+file description: custom css
+*/
+
 /*logo font: Bradley Hand ITC */
 
 /* CSS for global */
