--- a/views/pages/portfolio.ejs
+++ b/views/pages/portfolio.ejs
@@ -1,6 +1,7 @@
 <!-- File name: portfolio.ejs
      Author's name: Hae Yeon Kang (Lucy)
      web site name: Hae Yeon's Portfolio Website
+     URL: haeyeonkang.azurewebsites.net
      file description: This is a page that will display my previous works.
 -->
 
