--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,7 @@
 File name: header.ejs
 Author's name: Hae Yeon Kang (Lucy)
 web site name: Hae Yeon's Portfolio Website
+URL: haeyeonkang.azurewebsites.net
 file description: This head section will be called whenever a page is called.
 -->
 <!DOCTYPE html>
