--- a/server/views/pages/contact.ejs
+++ b/server/views/pages/contact.ejs
@@ -4,6 +4,8 @@
      URL: haeyeonkang.azurewebsites.net
      file description: This is a page with contact form that will send me a mail with details entered by users.
 -->
+
+<% include ../partials/header %>
 <style>
     body {
         background: url("../images/table.jpg") no-repeat center center fixed;
@@ -13,7 +15,10 @@
         -o-background-size: cover;
     }
 </style>
-<% include ../partials/header %>
+<body>
+    <header>
+<% include ../partials/navbar %>
+   </header>
     <main class="main">
         <div class="container">
             <div class="row">
@@ -22,7 +27,7 @@
                         <h1>Contact Me<h1>
                         <h4><em>Please fill out this contact form to send me an email.</em></h4>
                         <p><br/></p>
-                        <form action="/contact" method="post">
+                        <form action="#contact" method="post">
                             <div class="form-group input-group input-group-md">
                                 <span class="input-group-addon" id="sizing-addon2"><i class="fa fa-user"></i></span>
                                 <input type="text" class="form-control" id="inputName" name="name" placeholder="Full Name" required="requried">
