--- a/server/views/pages/services.ejs
+++ b/server/views/pages/services.ejs
@@ -6,6 +6,10 @@
 -->
 
 <% include ../partials/header %>
+<body>
+    <header>
+<% include ../partials/navbar %>
+   </header>
     <main class="main">
         <div class="container">
             <div class="page-header">
